--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   dsvpn:
     build: .
     devices:
-      - "/dev/net/tun:/dev/net/tun"
+      - "/dev:/dev"
     cap_add:
       - NET_ADMIN
-    privileged: true
-    network_mode: host
+    privileged: "true"
+    network_mode: "host"
     command: ["server", "vpn.key", "auto", "2222"]
     restart: unless-stopped
     volumes:
